--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -125,6 +125,6 @@ Arch Network consists of three main components:
   </Card>
 </Cards>
 
-:::::tip
+<Tip>
 💡 **Pro Tip:** Use the search function (press 's' or '/' on your keyboard) to quickly find what you're looking for in the documentation.
-:::::
+</Tip>
